styles/globals.scss
@tailwind base;
@tailwind components;
@tailwind utilities;

html {
	background-image: url("../public/Visiwig-Dots.svg");
	// visiwig.com/patterns
	// scale: 0.8 stroke: 19.31
	background-repeat: repeat;
	background-position: center;
	background-size: cover;
	background-color: white;
	color: black;
	font-family: "Poppins", sans-serif;
	scroll-behavior: smooth;
	@apply min-h-screen min-w-full;
}

.cardContainer {
	@apply p-1 md:p-4 w-full flex flex-col md:flex-row container gap-4 justify-center content-center flex-wrap;
}

